# beeper-triage

./: .env.example  .envrc  .gitignore  CLAUDE.md  PROJECT_LOG.md  README.md  pyproject.toml  requirements.txt
beeper_triage/: CLAUDE.md  __init__.py  beeper_client.py  cli.py  editor.py  inbox.py  openrouter_client.py  output.py  prompts.py  runtime.py  verbs.py  wsl_proxy.py
docs/plans/: 2026-01-31-copy-to-clipboard-design.md  2026-01-31-copy-to-clipboard-plan.md
docs/superpowers/plans/: 2026-06-02-beeper-cli-phase1-foundation.md  2026-06-02-beeper-cli-phase2-tier1-verbs.md  2026-06-07-beeper-cli-phase3-passthrough-tier2.md  2026-06-07-beeper-cli-phase4-routing-skill.md
docs/superpowers/specs/: 2026-06-02-beeper-cli-redesign-design.md  2026-07-14-beeper-inbox-web-design.md
tests/: test_adapter.py  test_cli.py  test_filters.py  test_inbox.py  test_output.py  test_picker.py  test_runtime.py  test_verbs.py
