[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beeper-triage"
version = "0.1.0"
description = "Minimal CLI to triage Beeper chats and draft replies with OpenRouter"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
  "beeper_desktop_api==5.0.0",
  "python-dotenv",
  "requests",
  "typer",
]

[project.scripts]
beeper = "beeper_triage.cli:app"
beeper-triage = "beeper_triage.cli:app"  # deprecated alias; remove after migration
beeper-proxy = "beeper_triage.wsl_proxy:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["beeper_triage*"]
exclude = ["exports*"]
